# conference-calendar

./: LICENSE  README.md  csv_calendar.py  google_calendar.py  models.py  pyproject.toml  sync.py  test_csv_calendar.py  test_google_calendar.py  test_sync.py
.github/: dependabot.yml
.github/workflows/: ci.yml  do-the-thing.yml
data/: 2020.csv
test_data/: 2020.csv  empty.csv  invalid_date.csv  missing_header.csv
