[tool.poetry]
name = "csvcalendar"
version = "0.1.0"
description = "Sync a CSV file with a Google Calendar"
authors = ["Mat Moore <matmoore@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.8.0"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.781"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
